refactor base_json global variable input

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -220,7 +220,7 @@
                             <div class="centered">There are currently no advanced options available</div>
                         </div>
                     </div>
-                    <div class="button" (click)="applySettings()">Apply Settings</div>
+                    <div class="button" (click)="applyGlobalSettings()">Apply Settings</div>
                 </div>
             </div>
 
