--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -18,6 +18,10 @@
     float: right;
 }
 
+.advanced-settings-toggle {
+    display: flex;
+}
+
 #mat-progress-bar {
     width: 95%;
     height: 2rem;
