--- a/src/app/components/input/segment-list/segment-list.component.html
+++ b/src/app/components/input/segment-list/segment-list.component.html
@@ -1,29 +1,29 @@
-<div>
-    <div>This network has a total of {{ totalNumSegments }} segments</div>
-    <div>Boundary Segments</div>
-    <div *ngIf="!boundarySegments.length"><strong>This network has no boundary segments</strong></div>
+<div class="section-item">
+    <div><strong>Boundary Segments</strong></div>
+    <div *ngIf="!boundarySegments.length" class="centered">This network has no boundary segments</div>
     <div class="list-short" *ngIf="boundarySegments.length">
         <div class="button" *ngFor="let segment of boundarySegments" [class.active]="isActive(segment.comid)"  (click)="selectSegment(segment.comid)">
             <div class="vertical-center">ComID {{ segment.comid }}</div>
         </div>
     </div>
-    <div>Headwater Segments</div>
-    <div *ngIf="!headwaterSegments.length"><strong>This network has no headwater segments</strong></div>
+    <div><strong>Headwater Segments</strong></div>
+    <div *ngIf="!headwaterSegments.length" class="centered">This network has no headwater segments</div>
     <div class="list-short" *ngIf="headwaterSegments.length">
         <div class="button" *ngFor="let segment of headwaterSegments" [class.active]="isActive(segment.comid)" (click)="selectSegment(segment.comid)">
             <div class="vertical-center">ComID {{ segment.comid }}</div>
         </div>
     </div>
-    <div>In-Network Segments</div>
-    <div *ngIf="!inNetworkSegments.length"><strong>This network has no segments</strong></div>
+    <div><strong>In-Network Segments</strong></div>
+    <div *ngIf="!inNetworkSegments.length" class="centered">This network has no segments</div>
     <div class="list-short" *ngIf="inNetworkSegments.length">
         <div class="button" *ngFor="let segment of inNetworkSegments" [class.active]="isActive(segment.comid)" (click)="selectSegment(segment.comid)">
             <div class="vertical-center">ComID {{ segment.comid }}</div>
         </div>
     </div>
-    <div>Pour Point</div>
-    <div *ngIf="!pourPoint"><strong>This network has no pour point</strong></div>
+    <div><strong>Pour Point</strong></div>
+    <div *ngIf="!pourPoint" class="centered">This network has no pour point</div>
     <div *ngIf="pourPoint" class="button" [class.active]="isActive(pourPoint.comid)" (click)="selectSegment(pourPoint.comid)">
         <div class="vertical-center">ComID {{ pourPoint.comid }}</div>
     </div>
+    <div class="centered">This network has a total of {{ totalNumSegments }} segments</div>
 </div>
