--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div><strong>Parameters</strong></div>
+    <!-- <div><strong>Parameters</strong></div>
     <div class="scroll-pane list-short section-item" *ngIf="parameters.length">
       <div *ngFor="let parameter of parameters" class="button">
         <div class="form-row">
@@ -48,12 +48,13 @@
     </div>
     <div *ngIf="!parameters.length" class="centered">
       This segment has no parameters
-    </div>
+    </div> -->
+
     <div><strong>Sources</strong></div>
     <div class="scroll-pane list-short section-item" *ngIf="sources.length">
       <div *ngFor="let source of sources" class="button">
         <div class="form-row">
-          <div class="vertical-center">{{ source.type }}</div><mat-icon title="Remove Source">delete</mat-icon>
+          <div class="vertical-center">{{ source.origin }} {{ source.type || "missing type"}} {{ source.dataType }}</div><mat-icon title="Remove Source">delete</mat-icon>
         </div>
       </div>
     </div>
@@ -114,58 +115,64 @@
     </div>
 
     <div *ngIf="addingSource" class="segment-form" [formGroup]="sourceForm" >
-      <strong>New Source</strong>
-      <div class="form-row">
-        <div>Source Type</div>
-        <select formControlName="sourceOrigin">
-            <option *ngIf="segmentType == 'boundary'">Boundary</option>
-            <option>Point Source</option>
-            <option>Overland Flow</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label>Use Constant Loading?</label>
-        <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
-      </div>
-      <div class="form-row" *ngIf="useConstLoadings">
-        <label>Constant Loading</label>
-        <input formControlName="constLoading" type="text">
-      </div>
-      <div class="form-row" *ngIf="!useConstLoadings">
-        <label>Upload Time Series</label>
-        <input 
-          formControlName="altLoadings"
-          type="file"  
-          accept=".csv"
-          name="files[]"
-          (change)="onFileChange($event)"
-        />
-      </div>
-      <div class="form-row">
-        <label>Loading Multiplier</label>
-        <input formControlName="loadingMulti" type="number">
-      </div>
-      <div *ngIf="uploadedTimeSeries">
-        <div class="table-flex-container">
-          <table mat-table [dataSource]="dataSource">
-            <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
-              <th mat-header-cell *matHeaderCellDef>
-                <div>{{ disCol }}</div>
-              </th>
-              <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
-            </ng-container>
-      
-            <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-      
-            <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
-          </table>
+        <strong>New Source</strong>
+        <div class="form-row">
+            <div>Source Origin</div>
+            <select formControlName="sourceOrigin">
+                <option *ngIf="segmentType == 'boundary'">Boundary</option>
+                <option>Point Source</option>
+                <option>Overland Flow</option>
+            </select>
         </div>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-      </div>
-      <div class="form-row">
-        <div class="button" (click)="cancelAdd()">Cancel</div>
-        <div class="button" (click)="insertSource()">Add Source</div>
-      </div>
+        <div class="form-row">
+            <div>Source Type</div>
+            <select formControlName="sourceType">
+                <option *ngFor="let type of sourceTypes">{{ type }}</option> 
+            </select>
+        </div>
+        <div class="form-row">
+            <div>Constant Loading <input type="radio" name="useConstLoadings" formControlName="useConstLoadings" value="constantLoading"></div>
+            <div>Time-series Loading <input type="radio" name="useConstLoadings" formControlName="useConstLoadings" value="timeSeries"></div>
+        </div>
+        <div class="section-item" *ngIf="sourceForm.get('useConstLoadings').value == 'constantLoading'">
+            <div class="form-row">
+                <div><label>Constant Loading</label></div>
+                <input formControlName="constLoadingValue" type="number" class="input-number">
+            </div>
+            <div class="form-row">
+                <div><label>Loading Multiplier</label></div>
+                <input formControlName="constLoadingMulti" type="number">
+            </div>
+        </div>
+        <div class="form-row" *ngIf="sourceForm.get('useConstLoadings').value == 'timeSeries'">
+            <label>Upload Time Series</label>
+            <input 
+            type="file"  
+            accept=".csv"
+            name="files[]"
+            (change)="onFileChange($event)"
+            />
+        </div>
+        <div *ngIf="uploadedTimeSeries">
+            <div class="table-flex-container">
+            <table mat-table [dataSource]="dataSource">
+                <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+                <th mat-header-cell *matHeaderCellDef>
+                    <div>{{ disCol }}</div>
+                </th>
+                <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+                </ng-container>
+        
+                <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+        
+                <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+            </table>
+            </div>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+        <div class="form-row">
+            <div class="button" (click)="cancelAdd()">Cancel</div>
+            <div class="button" (click)="insertSource()">Add Source</div>
+        </div>
     </div>
-  </div>
 </div>
